--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -22,7 +22,7 @@
         android:id="@+id/event_name"
         android:inputType="text"
         android:textColor="#ffffff"
-        android:textColorHint="@color/white"/>
+        android:textColorHint="@color/input_login_hint"/>
 
 
 
@@ -35,7 +35,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:textColor="#ffffff"
-        android:textColorHint="@color/white"/>
+        android:textColorHint="@color/input_login_hint"/>
 
 
 
@@ -111,8 +111,6 @@
         android:editable="true"
         android:textColor="#ffffff"
         android:textSize="25dp"
-
-
         android:layout_below="@+id/att" />
 
 
@@ -137,7 +135,7 @@
         android:textColor="#ffffff"
         android:layout_below="@+id/event_time"
         android:layout_alignParentStart="true"
-        android:textColorHint="@color/white"/>
+        android:textColorHint="@color/input_login_hint"/>
 
     <Button
         android:id="@+id/btncreateeve"
